@@ -3,6 +3,7 @@ sbotools
   * sbocheck: Do not use compact format for CLASSIC mode
   * Repo.pm: Prompt for deletion if SBO_HOME/repo is malformed instead of simply erroring out
   * Set GPG_VERIFY to TRUE to verify with gpg in case of repo fetch, sboinstall or sboupgrade
+  * Bugfix: do not crash if sbotools.conf provides an improper value of SLACKWARE_VERSION
 
 3.1 - 2024-12-05
   * sbofind: Allow multiple search terms
